<resources>
    <string name="app_name">CityBattle</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="login_text">Login</string>
    <string name="user_profile_text">User profile</string>
    <string name="register_text">Register</string>
    <string name="login_email">E-mail: </string>
    <string name="login_password">Password: </string>
    <string name="login_loginBtn">Login</string>
    <string name="login_signupBtn">Signup</string>
    <string name="login_signupText">If you don\'t have account please: </string>
    <string name="register_repeatPassword">Repeat password: </string>
    <string name="register_registerBtn">Register</string>
    <string name="register_username">Username: </string>
    <string name="user_profile_age">Age: </string>
    <string name="user_profile_firstName">First Name: </string>
    <string name="user_profile_lastName">Last Name: </string>
    <string name="user_profile_saveBtn">Save</string>
    <string name="user_profile_cancelBtn">Cancel</string>
    <string name="user_profile_image">user_image</string>
</resources>
